--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
 			</div>
 			<div class="row mt-2 mb-2">
 				<div class="col-md-9 text-white text-center">
-					<h4 class="ml-5 mt-4">Information about: My hobbies, sports, books,</h4>
-					<br><h4 class="ml-5 mt-4">and music.</h4>
+					<h4 class="ml-5 mt-4">Information about: My hobbies, sports, books <br> and music.</h4>
 					<button class="ml-5 btn btn-small btn-round btn-warning" style=" border-radius: 15px; width: 80px; background-image: linear-gradient(to right,#FFA800, #FFFFAA  );">More</button>
 				</div>
 			</div>
