--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <title>Mauro Home</title>
 
-<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="media/Logo.svg">
 
 <!-- jQuery -->
 <script src="js/jquery-2.0.0.min.js" type="text/javascript"></script>
@@ -53,7 +53,7 @@
 	<section class="border-bottom" >
 	<nav class="navbar navbar-main navbar-expand-lg navbar-light" id="navbar_top" style="background-color: #A5C1F8; overflow: hidden;">
 	  <div class="container-fluid">
-		  <a class="navbar-brand" href="#"><img src="media/2 Professional Experience/b8a4eff9a2380f5afe6be0f6e279daca_icon.png" class="logo"></a>
+		  <a class="navbar-brand" href="#"><img src="media/Logo.svg" class="logo"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav1" aria-controls="main_nav" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
@@ -63,7 +63,7 @@
 			  <a class="nav-link" href="#" style="color: white; margin-left: 80px;">Home </a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="#" style="color: white; margin-left: 80px;">My Life</a>
+			  <a class="nav-link" href="mylife.html" style="color: white; margin-left: 80px;">My Life</a>
 			</li>
 			<li class="nav-item">
 			  <a class="nav-link" href="#" style="color: white; margin-left: 80px;">Professional Experience</a>
@@ -125,7 +125,7 @@
 			<div class="row mt-2 mb-2">
 				<div class="col-md-9 text-white text-center">
 					<h4 class="ml-5 mt-4">Information about: My hobbies, sports, books, movies and music.</h4>
-					<button class="ml-5 btn btn-small btn-round btn-warning" style=" border-radius: 15px; width: 80px; background-image: linear-gradient(to right,#FFA800, #FFFFAA  );">More</button>
+					<button class="btn  mb-4 text-white" style="border: 1px solid #243B69; border-radius: 15px; width: 80px; background-image: linear-gradient(to right,#FFA800, #FFFFAA  );">More</button>
 				</div>
 			</div>
 		</div>
@@ -140,7 +140,7 @@
 <!-- ========================= Heading ========================= -->
 	<div class="row">
 		<div class="col-md-12 text-center">
-			<p style="color: #011742; font-size: 50px;"><b>Professional Experince</b></p>
+			<p style="color: #011742; font-size: 60px;"><b>Professional Experince</b></p>
 		</div>
 	</div>
 	<!-- ========================= Heading End ========================= -->
@@ -150,45 +150,47 @@
 		<div class="col-xs-12 col-md-12 text-center">
 			<div class="row">
 				<div class="col-xs-1 col-md-4"></div>
-				<div class="col-xs-3 col-md-3 ml-5 ">
+				<div class="col-xs-3 col-md-3 ml-5 mb-5 ">
 					<div class="icontext mb-3">
 							<a href="#">
 							<img class="icon icon-lg rounded-circle" style="width: 154px; height: 154px;" src="media/2 Professional Experience/b8a4eff9a2380f5afe6be0f6e279daca_icon.png">
 							</div> <!-- iconbox // -->
 							<div>
-								<p class=" text-dark" ><b>Nuevatel-Viva (TELECOM)<br>Product owner-Postpaid<br>04/2019-Presently</b></p>
+								<p  style="font-family: Noto sans JP ; font-size: 25px; color: #011742; font-style: normal; font-weight: normal;" >Nuevatel-Viva (TELECOM)<br>Product owner-Postpaid<br>04/2019-Presently</p>
 							</a>
 						</div>
 				</div>
-				<div class="col-xs-3 col-md-3 ml-5">
+				<hr class="d-none d-lg-block" style="margin-top: 80px; margin-left: -45px; margin-right: -45px; color:#3F75E2;  background-color:#fff; height:2px;  width:40px;  border-top:2px dashed #3F75E2;">
+				<div class="col-xs-3 col-md-2 ml-5">
 					<div class="icontext mb-3">
 							<a href="#">
 							<img class="icon icon-lg rounded-circle" style="width: 160px; height: 160px;" src="media/2 Professional Experience/Post – 2.png">
 							</div> <!-- iconbox // -->
 							<div>
-								<p class=" text-dark" ><b>Alien Store   <br>Founder/Owner <br>1 month<br>2021</b></p>
+								<p style="font-family: Noto sans JP ; font-size: 25px; color: #011742; font-style: normal; font-weight: normal;" >Alien Store   <br>Founder/Owner <br>1 month<br>2021</p>
 							</a>
 						</div>
 				</div>
 			</div>
+			<hr class=" d-none d-lg-block" style="margin-left: 763px; margin-top: -30px;margin-bottom: -30px; color:#3F75E2; background-color:#fff; height:50px;  width:2px;  border-left:2px dashed #3F75E2;">
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-3 ml-5">
-						<div class="icontext mt-5">
+						<div class="icontext mt-5 ">
 							<a href="#">
 							<img class="icon icon-lg rounded-circle" style="width: 199px; height: 200px;" src="media/2 Professional Experience/LOGO-NONNAsd.png">
 							</div> <!-- iconbox // -->
 							<div>
-								<p class=" text-dark" ><b>Nonna <br> Founder/OwnerProduct <br>24 months<br> 2018 - 2020</b></p>
+								<p style="font-family: Noto sans JP ; font-size: 25px; color: #011742; font-style: normal; font-weight: normal;" >Nonna <br> Founder/OwnerProduct <br>24 months<br> 2018 - 2020</p>
 							</a>
 						</div>
-
-						<div class="icontext  mt-5">
+						<hr class=" d-none d-lg-block" style="margin-left: 182px; margin-bottom: -10px; color:#3F75E2; background-color:#fff; height:60px;  width:2px;  border-left:2px dashed #3F75E2;">
+						<div class="icontext  ">
 							<a href="#">
 							<img class="icon icon-lg rounded-circle" style="width: 153px; height: 154px;" src="media/2 Professional Experience/images (1).png">
 							</div> <!-- iconbox // -->
 							<div>
-								<p class=" text-dark" ><b>Bebidas Bolivianas BBO S.A./CCU/Heineken<br>  Brand manager - softdrinks & water 23 months 2017-2019 <br>23 months<br> 2017 - 2019</b></p>
+								<p style="font-family: Noto sans JP ; font-size: 25px; color: #011742; font-style: normal; font-weight: normal;" >Bebidas Bolivianas BBO S.A./CCU/Heineken<br>  Brand manager - softdrinks & water 23 months 2017-2019 <br>23 months<br> 2017 - 2019</p>
 							</a>
 						</div>
 					
@@ -201,8 +203,8 @@
 						
 						<div class="row mt-5">
 							<div class="col text-center " style="background-color: #EAF1FF;  border-radius: 1%; box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);">
-								<p class="ml-2 mt-3"><b>Information about : My work time -line, projects and professional<br> achivements.</b></p>
-								<button class=" btn btn-small btn-round btn-warning mb-4" style=" border-radius: 15px; width: 80px; background-image: linear-gradient(to right,#FFA800, #FFFFAA  );">More</button>
+								<p class="ml-2 mt-3" style="font-family: Noto sans JP regular; font-size: 20px; color: #011742; font-style: normal; font-weight: normal;">Information about : My work time -line, projects and professional achivements.</p>
+								<button class="btn  mb-4 text-white" style="border: 1px solid #EAF1FF; border-radius: 15px; width: 80px; background-image: linear-gradient(to right,#FFA800, #FFFFAA  );">More</button>
 						</div>
 						</div>
 				</div>
@@ -775,7 +777,7 @@
 						<div class="col-md-6 mb-5">
 							<h5 class="title">Born</h5>
 							<div class="inline mt-3 ">
-								<span><img class="icon rounded-circle" style="width: 45px; height: 45px;" src="media/6 About me/1200px-Flag_of_Bolivia.svg.png"></span>
+								<span><img class="icon rounded-circle" style="width: 45px; height: 45px;" src="media/Flag_of_Santa_Cruz.png"></span>
 								<span><img class="icon rounded-circle " style="width: 45px; height: 45px;" src="media/5 References/1200px-Flag_of_Bolivia.svg.png"></span>
 							</div>
 							<div>
