--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			  <a class="nav-link" href="#" style="color: white; margin-left: 80px;">Home </a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="mylife.html" style="color: white; margin-left: 80px;">My Life</a>
+			  <a class="nav-link" href="Mylife.html" style="color: white; margin-left: 80px;">My Life</a>
 			</li>
 			<li class="nav-item">
 			  <a class="nav-link" href="#" style="color: white; margin-left: 80px;">Professional Experience</a>
