--- a/mylife.html
+++ b/mylife.html
@@ -124,15 +124,21 @@
 	</div>
 	<!-- ========================= My Life Description END ========================= -->
 	<!-- ========================= Images of SURF ========================= -->
-<div class="row mt-5">
-	<div class="col mb-4">
+<div class="row mt-5 d-flex flex-row">
+	<div class="col-md-6 p-2">
 		<p class="text-center" style="color: #011742; font-size: 25px;font-family: noto sans jp;"><b>Surf</b></p>
-		<div class="row">
-			<div class="col-md-2"></div>
-			<div class="col-md-8">
-				<div style="margin-left: 20%;">
+		<div class="row d-flex flex-row">
+			
+			<div class="col-md-12 d-flex justify-content-center">
+				<div class="d-none d-sm-block">
 					<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Surf/3.jpg"></span>
-					<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Surf/1.jpg"></span>
+					<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Surf/1.jpg"></span><br>
+					<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Surf/2.jpg"></span>
+					<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Surf/Surf2.jpg"></span>
+				</div>
+				<div class="d-block d-sm-none" style="margin-left: 20%;">
+					<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Surf/3.jpg"></span>
+					<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Surf/1.jpg"></span><br>
 					<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Surf/2.jpg"></span>
 					<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Surf/Surf2.jpg"></span>
 				</div>
@@ -141,14 +147,20 @@
 		</div>
 	</div>
 	<!-- ========================= Images of Hiking ========================= -->
-	<div class="col">
+	<div class="col-md-6 p-2">
 		<p class="text-center" style="color: #011742; font-size: 25px;font-family: noto sans jp;"><b>Hiking</b></p>
-		<div class="row">
-			<div class="col-md-1"></div>
-			<div class="col-md-8" >
-				<div style="margin-left: 20%;">
+		<div class="row d-flex flex-row">
+			
+			<div class="col-md-12 d-flex justify-content-center ">
+				<div class="d-none d-sm-block">
 					<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Hiking/Screenshot_20210425-192656_Instagram.jpg"></span>
-					<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Hiking/Screenshot_20210425-192702_Instagram.jpg"></span>
+					<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Hiking/Screenshot_20210425-192702_Instagram.jpg"></span><br>
+					<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Hiking/Screenshot_20210425-192834_Instagram.jpg"></span>
+					<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Hiking/Screenshot_20210425-192651_Instagram.jpg"></span>
+				</div>
+				<div class="d-block d-sm-none" style="margin-left: 20%;">
+					<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Hiking/Screenshot_20210425-192656_Instagram.jpg"></span>
+					<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Hiking/Screenshot_20210425-192702_Instagram.jpg"></span><br>
 					<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Hiking/Screenshot_20210425-192834_Instagram.jpg"></span>
 					<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Hiking/Screenshot_20210425-192651_Instagram.jpg"></span>
 				</div>
@@ -163,10 +175,19 @@
 		<p class="text-center mt-4" style="color: #011742; font-size: 25px;font-family: noto sans jp;"><b>Family & Friends</b></p>
 	</div>
 </div>
-<div class="row mt-3">
-				<div class="col-md-1"></div>
-				<div class="col-md-10">
-					<div style="margin-left: 12%;">
+<div class="row mt-3 d-flex flex-row">
+				<div class="col-md-12  d-flex justify-content-center">
+					<div class="d-none d-sm-block" >
+						<span><img class="rounded mt-1 img-fluid" style="width: 254px; height: 234px;" src="media/mylife/Family and F/12294705_10154116781783188_1485405242382298770_n.jpg"></span>
+						<span><img class="rounded mt-1" style="width: 254px; height: 234px;" src="media/mylife/Family and F/13243811_10156858834105137_7769391282621239971_o.jpg"></span>
+						<span><img class="rounded mt-1" style="width: 254px; height: 234px;" src="media/mylife/Family and F/61098547_10156564067972705_8882505930252484608_n.jpg"></span>
+						<span><img class="rounded mt-1" style="width: 254px; height: 234px;" src="media/mylife/Family and F/74566895_10162781431560717_6548277911676256256_n.jpg"></span><br>
+						<span><img class="rounded mt-1" style="width: 254px; height: 234px;" src="media/mylife/Family and F/134373438_10165040780370323_5472890188055744839_n.jpg"></span>
+						<span><img class="rounded mt-1" style="width: 254px; height: 234px;" src="media/mylife/Family and F/35358681_10156433821018188_7861739594385981440_n.jpg"></span>
+						<span><img class="rounded mt-1" style="width: 254px; height: 234px;" src="media/mylife/Family and F/Chamarra.jpg"></span>
+						<span><img class="rounded mt-1" style="width: 254px; height: 234px;" src="media/mylife/Family and F/14725590_10154045401752705_8560736960972608649_n.jpg"></span>
+					</div>
+					<div class="d-block d-sm-none" style="margin-left: 12%;">
 						<span><img class="rounded mt-1 img-fluid" style="width: 254px; height: 234px;" src="media/mylife/Family and F/12294705_10154116781783188_1485405242382298770_n.jpg"></span>
 						<span><img class="rounded mt-1" style="width: 254px; height: 234px;" src="media/mylife/Family and F/13243811_10156858834105137_7769391282621239971_o.jpg"></span>
 						<span><img class="rounded mt-1" style="width: 254px; height: 234px;" src="media/mylife/Family and F/61098547_10156564067972705_8882505930252484608_n.jpg"></span>
@@ -175,8 +196,7 @@
 						<span><img class="rounded mt-1" style="width: 254px; height: 234px;" src="media/mylife/Family and F/35358681_10156433821018188_7861739594385981440_n.jpg"></span>
 						<span><img class="rounded mt-1" style="width: 254px; height: 234px;" src="media/mylife/Family and F/Chamarra.jpg"></span>
 						<span><img class="rounded mt-1" style="width: 254px; height: 234px;" src="media/mylife/Family and F/14725590_10154045401752705_8560736960972608649_n.jpg"></span>
-				</div>
-				<div class="col-md-1"></div>
+					</div>	
 		</div>
 </div>
 <!-- ========================= Heading End ========================= -->
@@ -187,7 +207,7 @@
 		<p class="text-center mt-4" style="color: #011742; font-size: 25px;font-family: noto sans jp;"><b>Movies and books</b></p>
 	</div>
 </div>
-<div class="row mt-2">
+<div class="row mt-2 ">
 	<div class="col mb-4">
 		<p class="text-center" style="color: #011742; font-size: 25px;font-family: noto sans jp;"><b>Books</b></p>
 		<div class="row d-block d-sm-none">
@@ -204,22 +224,25 @@
 					<span><img class="rounded mt-1 " style="margin-left: 28%; width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
 				</div>
 		</div>
-		<div class="row d-none d-lg-block">
-			<div class="col-md-12">
-				<span><img class="rounded mt-1 " style="margin-left: 270px; width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
-				<span><img class="rounded mt-1 " style="margin-left: 60px;  width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
-				<span><img class="rounded mt-1 " style="margin-left: 60px; width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
-				<span><img class="rounded mt-1 " style=" margin-left: 60px;width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
-				<span><img class="rounded mt-1 " style="margin-left: 60px; width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
+		<div class="row d-flex flex-row">
+			<div class="col-md-12 d-flex justify-content-center">
+				<div class=" d-none d-lg-block">
+				<span><img class="rounded mt-1 ml-5" style=" width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
+				<span><img class="rounded mt-1 ml-5" style="  width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
+				<span><img class="rounded mt-1 ml-5" style=" width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
+				<span><img class="rounded mt-1 ml-5" style="  width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
+				<span><img class="rounded mt-1 ml-5" style=" width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
+				</div>
 			</div>
 		</div>
-		<div class="row d-none d-lg-block mt-5">
-			<div class="col-md-12">
-				<span><img class="rounded mt-1 " style="margin-left: 370px; width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
-				<span><img class="rounded mt-1 " style="margin-left: 60px;  width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
-				<span><img class="rounded mt-1 " style="margin-left: 60px; width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
-				<span><img class="rounded mt-1 " style=" margin-left: 60px;width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
-				
+		<div class="row d-flex flex-row">
+			<div class="col-md-12 d-flex justify-content-center">
+				<div class=" d-none d-lg-block">
+				<span><img class="rounded mt-1 ml-5" style=" width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
+				<span><img class="rounded mt-1 ml-5" style="  width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
+				<span><img class="rounded mt-1 ml-5" style=" width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
+				<span><img class="rounded mt-1 ml-5" style="  width: 162px; height: 263px;" src="media/4 Education/1.png"></span>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -256,13 +279,23 @@
 
 		<div class="row mt-4 text-center ">
 				<div class="col-md-2	"></div>
-				<div class="col-md-1 d-none d-lg-block" style="margin-left: 120px;">
+				<div class="col-md-1 d-none d-lg-block text-center" style="margin-left: 120px;">
 					<div class="icontext mb-3 " >
 						<a href="#">
 						<img  style="width: 133px; height: 133px;" src="media/4 Education/1.png" style="background-color: aliceblue;">
 						</div> <!-- iconbox // -->
 						<div>
-							<small class=" font-weight-bolder text-dark text-center">Freddy King - Getting Ready - Blues</small>
+							<small style="color: #011742; font-size: 22px;font-family: noto sans jp;">Freddy King - Getting Ready - Blues</small>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-1 ml-5 d-none d-lg-block text-center">
+					<div class="icontext mb-3 " >
+						<a href="#">
+						<img  style="width: 133px; height: 133px;" src="media/4 Education/1.png" style="background-color: aliceblue;">
+						</div> <!-- iconbox // -->
+						<div>
+							<small  style="color: #011742; font-size: 22px;font-family: noto sans jp;">Angeles de Charly -Cumbia</small>
 						</a>
 					</div>
 				</div>
@@ -272,7 +305,7 @@
 						<img  style="width: 133px; height: 133px;" src="media/4 Education/1.png" style="background-color: aliceblue;">
 						</div> <!-- iconbox // -->
 						<div>
-							<small class=" font-weight-bolder text-dark text-center">Angeles de Charly -Cumbia</small>
+							<small  style="color: #011742; font-size: 22px;font-family: noto sans jp;">Dalexx Climaxx -Reggaeton</small>
 						</a>
 					</div>
 				</div>
@@ -282,7 +315,7 @@
 						<img  style="width: 133px; height: 133px;" src="media/4 Education/1.png" style="background-color: aliceblue;">
 						</div> <!-- iconbox // -->
 						<div>
-							<small class=" font-weight-bolder text-dark text-center">Dalexx Climaxx -Reggaeton</small>
+							<small  style="color: #011742; font-size: 22px;font-family: noto sans jp;">Daft Punk -Tecnho/Funky</small>
 						</a>
 					</div>
 				</div>
@@ -292,17 +325,7 @@
 						<img  style="width: 133px; height: 133px;" src="media/4 Education/1.png" style="background-color: aliceblue;">
 						</div> <!-- iconbox // -->
 						<div>
-							<small class=" font-weight-bolder text-dark text-center">Daft Punk -Tecnho/Funky</small>
-						</a>
-					</div>
-				</div>
-				<div class="col-md-1 ml-5 d-none d-lg-block">
-					<div class="icontext mb-3 " >
-						<a href="#">
-						<img  style="width: 133px; height: 133px;" src="media/4 Education/1.png" style="background-color: aliceblue;">
-						</div> <!-- iconbox // -->
-						<div>
-							<small class=" font-weight-bolder text-dark text-center">Mansur Brown -Rock Indie</small>
+							<small  style="color: #011742; font-size: 22px;font-family: noto sans jp;">Mansur Brown -Rock Indie</small>
 						</a>
 					</div>
 				</div>
