--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			  <a class="nav-link" href="Mylife.html" style="color: white; margin-left: 80px;">My Life</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="#" style="color: white; margin-left: 80px;">Professional Experience</a>
+			  <a class="nav-link" href="Professional-experinces.html" style="color: white; margin-left: 80px;">Professional Experience</a>
 			</li>
 		  </ul>
 		   <div class="widgets-wrap d-none d-md-block">
