--- a/Professional-experinces.html
+++ b/Professional-experinces.html
@@ -127,7 +127,7 @@
 											<img class="icon icon-lg rounded-circle mb-3" style="width: 134px; height: 134px;" src="media/New folder/BBO.png">
 											</div> <!-- iconbox // -->
 											<div>
-												<p style="font-family: Noto sans JP ; font-size: 25px; color: #011742; font-style: normal; font-weight: normal;" >Bebidas Bolivianas BBO S.A./CCU/Heineken<br> Brand manager - softdrinks & water <br>23 months<br> 2017-2019</p>
+												<p style="font-family: Noto sans JP ; font-size: 25px; color: #011742; font-style: normal; font-weight: normal;" >Bebidas Bolivianas BBO/CCU/Heineken<br> Brand manager- softdrinks/waters<br>23 months<br> 2017-2019</p>
 												<button class="btn mb-4 text-white" style="border: none; font: normal normal normal 25px/36px Noto Sans JP; border-radius: 15px; width: 134px; height: 54px; background-image: linear-gradient(to right,#FFA800, #FFFFAA  );">More</button>
 											</a>
 										</div>
