--- a/Professional-experinces.html
+++ b/Professional-experinces.html
@@ -99,7 +99,7 @@
 									<div class="col-md-3"></div>
 									<div class="col-md-6" style="background: #EAF1FF 0% 0% no-repeat padding-box; box-shadow: 0px 3px 6px #00000029;">
 										<p class="text-center mt-4 mb-4 ml-4 mr-4" style=" font-family: Noto sans JP; font-size: 20px; color: #011742; font-style: normal; font-weight: normal;">
-											I come from a merchant family, since I was a kid I worked at my father´s store, 
+											HOLA VICKY!!!!  I come from a merchant family, since I was a kid I worked at my father´s store, 
 											so I can go out in the weekends with my gang :) I never thought that I´d be working as commercial men,
 											 I love the commercial war, it´s my passion, sometimes I even did it free, only to taste the feeling.</p>
 				
