--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 				<div class="col-xs-1 col-md-4"></div>
 				<div class="col-xs-3 col-md-3 ml-5 mb-5 ">
 					<div class="icontext mb-3">
-							<a href="#">
+							<a href="Viva.html">
 							<img class="icon icon-lg rounded-circle" style="width: 154px; height: 154px;" src="media/2 Professional Experience/b8a4eff9a2380f5afe6be0f6e279daca_icon.png">
 							</div> <!-- iconbox // -->
 							<div>
@@ -186,7 +186,7 @@
 						</div>
 						<hr class=" d-none d-lg-block" style="margin-left: 182px; margin-bottom: -10px; color:#3F75E2; background-color:#fff; height:60px;  width:2px;  border-left:2px dashed #3F75E2;">
 						<div class="icontext  ">
-							<a href="#">
+							<a href="BBO.html">
 							<img class="icon icon-lg rounded-circle" style="width: 153px; height: 154px;" src="media/2 Professional Experience/images (1).png">
 							</div> <!-- iconbox // -->
 							<div>
