--- a/Professional Experinces.html
+++ b/Professional Experinces.html
@@ -58,17 +58,17 @@
 		  <span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="main_nav1">
-		  <ul class="navbar-nav mr-auto" >
-			<li class="nav-item">
-			  <a class="nav-link" href="#" style="color: white; margin-left: 80px;">Home </a>
-			</li>
-			<li class="nav-item">
-			  <a class="nav-link" href="#" style="color: white; margin-left: 80px;">My Life</a>
-			</li>
-			<li class="nav-item">
-			  <a class="nav-link" href="#" style="color: white; margin-left: 80px;">Professional Experience</a>
-			</li>
-		  </ul>
+			<ul class="navbar-nav mr-auto" >
+				<li class="nav-item">
+				  <a class="nav-link" href="index.html" style="color: white; margin-left: 80px;">Home </a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="My life.html" style="color: white; margin-left: 80px;">My Life</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="Professional Experinces.html" style="color: white; margin-left: 80px;">Professional Experience</a>
+				</li>
+			  </ul>
 		   <div class="widgets-wrap d-none d-md-block">
 				<ul class="navbar-nav mr-auto" >
 					<li class="nav-item">
@@ -111,7 +111,7 @@
 									<div class="col-md-2 col-sm-2 col-xs-2"></div>
 									<div class="col-md-4 col-sm-4 col-xs-4">
 										<div class="icontext mt-5 ">
-											<a href="#">
+											<a href="Viva.html">
 											<img class="icon icon-lg rounded-circle mb-3" style="width: 134px; height: 134px;" src="media/New folder/Viva.png">
 											</div> <!-- iconbox // -->
 											<div>
@@ -123,11 +123,11 @@
 									
 									<div class="col-md-4 col-sm-6 col-xs-4">
 										<div class="icontext mt-5 ">
-											<a href="#">
+											<a href="BBO.html">
 											<img class="icon icon-lg rounded-circle mb-3" style="width: 134px; height: 134px;" src="media/New folder/BBO.png">
 											</div> <!-- iconbox // -->
 											<div>
-												<p style="font-family: Noto sans JP ; font-size: 25px; color: #011742; font-style: normal; font-weight: normal;" >Bebidas Bolivianas BBO/CCU/Heineken<br> Brand manager- Softdrinks<br>23 months<br> 2017-2019</p>
+												<p style="font-family: Noto sans JP ; font-size: 25px; color: #011742; font-style: normal; font-weight: normal;" >Bebidas Bolivianas BBO S.A./CCU/Heineken<br> Brand manager - softdrinks & water <br>23 months<br> 2017-2019</p>
 												<button class="btn mb-4 text-white" style="border: none; font: normal normal normal 25px/36px Noto Sans JP; border-radius: 15px; width: 134px; height: 54px; background-image: linear-gradient(to right,#FFA800, #FFFFAA  );">More</button>
 											</a>
 										</div>
@@ -197,7 +197,7 @@
 									<div class="col-md-1 col-sm-1 col-xs-1"></div>
 									<div class="col-md-2 col-sm-2 col-xs-1  text-center">
 										<div class="icontext mt-5 ">
-											<a href="#">
+											<a href="Nonna.html">
 											<img class="icon icon-lg rounded-circle" style="width: 134px; height: 134px;" src="media/New folder/Nonna.png">
 											</div> <!-- iconbox // -->
 											<div>
