--- a/Viva.html
+++ b/Viva.html
@@ -58,17 +58,17 @@
 		  <span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="main_nav1">
-		  <ul class="navbar-nav mr-auto" >
-			<li class="nav-item">
-			  <a class="nav-link" href="#" style="color: white; margin-left: 80px;">Home </a>
-			</li>
-			<li class="nav-item">
-			  <a class="nav-link" href="#" style="color: white; margin-left: 80px;">My Life</a>
-			</li>
-			<li class="nav-item">
-			  <a class="nav-link" href="#" style="color: white; margin-left: 80px;">Professional Experience</a>
-			</li>
-		  </ul>
+			<ul class="navbar-nav mr-auto" >
+				<li class="nav-item">
+				  <a class="nav-link" href="index.html" style="color: white; margin-left: 80px;">Home </a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="My life.html" style="color: white; margin-left: 80px;">My Life</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="Professional Experinces.html" style="color: white; margin-left: 80px;">Professional Experience</a>
+				</li>
+			  </ul>
 		   <div class="widgets-wrap d-none d-md-block">
 				<ul class="navbar-nav mr-auto" >
 					<li class="nav-item">
