--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
 		  <span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="main_nav1">
-		  <ul class="navbar-nav mr-auto" >
-			<li class="nav-item">
-			  <a class="nav-link" href="#" style="color: white; margin-left: 80px;">Home </a>
-			</li>
-			<li class="nav-item">
-			  <a class="nav-link" href="Mylife.html" style="color: white; margin-left: 80px;">My Life</a>
-			</li>
-			<li class="nav-item">
-			  <a class="nav-link" href="Professional-experinces.html" style="color: white; margin-left: 80px;">Professional Experience</a>
-			</li>
-		  </ul>
+			<ul class="navbar-nav mr-auto" >
+				<li class="nav-item">
+				  <a class="nav-link" href="index.html" style="color: white; margin-left: 80px;">Home </a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="My life.html" style="color: white; margin-left: 80px;">My Life</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="Professional Experinces.html" style="color: white; margin-left: 80px;">Professional Experience</a>
+				</li>
+			  </ul>
 		   <div class="widgets-wrap d-none d-md-block">
 				<ul class="navbar-nav mr-auto" >
 					<li class="nav-item">
@@ -152,7 +152,7 @@
 				<div class="col-xs-1 col-md-4"></div>
 				<div class="col-xs-3 col-md-3 ml-5 mb-5 ">
 					<div class="icontext mb-3">
-							<a href="Viva.html">
+							<a href="#">
 							<img class="icon icon-lg rounded-circle" style="width: 154px; height: 154px;" src="media/2 Professional Experience/b8a4eff9a2380f5afe6be0f6e279daca_icon.png">
 							</div> <!-- iconbox // -->
 							<div>
@@ -186,7 +186,7 @@
 						</div>
 						<hr class=" d-none d-lg-block" style="margin-left: 182px; margin-bottom: -10px; color:#3F75E2; background-color:#fff; height:60px;  width:2px;  border-left:2px dashed #3F75E2;">
 						<div class="icontext  ">
-							<a href="BBO.html">
+							<a href="#">
 							<img class="icon icon-lg rounded-circle" style="width: 153px; height: 154px;" src="media/2 Professional Experience/images (1).png">
 							</div> <!-- iconbox // -->
 							<div>
