--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			</div>
 			<div class="row ">
 				<div class="col-md-12 text-white mt-1">
-					<h4 class="ml-5">Greeting I'm</h4>
+					<h4 class="ml-5">Greetings I'm</h4>
 					<p class="ml-5 d-none d-sm-block" style="font-size: 65px; "><b>Mauro Landivar</b></p>
 					<p class="ml-5 d-block d-sm-none" style="font-size: 35px; "><b>Mauro Landivar</b></p>
 				</div>
@@ -181,7 +181,7 @@
 							<img class="icon icon-lg rounded-circle" style="width: 199px; height: 200px;" src="media/2 Professional Experience/LOGO-NONNAsd.png">
 							</div> <!-- iconbox // -->
 							<div>
-								<p style="font-family: Noto sans JP ; font-size: 25px; color: #011742; font-style: normal; font-weight: normal;" >Nonna <br> Founder/OwnerProduct <br>24 months<br> 2018 - 2020</p>
+								<p style="font-family: Noto sans JP ; font-size: 25px; color: #011742; font-style: normal; font-weight: normal;" >Nonna <br> Founder/Owner<br>24 months<br> 2018 - 2020</p>
 							</a>
 						</div>
 						<hr class=" d-none d-lg-block" style="margin-left: 182px; margin-bottom: -10px; color:#3F75E2; background-color:#fff; height:60px;  width:2px;  border-left:2px dashed #3F75E2;">
@@ -190,7 +190,7 @@
 							<img class="icon icon-lg rounded-circle" style="width: 153px; height: 154px;" src="media/2 Professional Experience/images (1).png">
 							</div> <!-- iconbox // -->
 							<div>
-								<p style="font-family: Noto sans JP ; font-size: 25px; color: #011742; font-style: normal; font-weight: normal;" >Bebidas Bolivianas BBO S.A./CCU/Heineken<br>  Brand manager - softdrinks & water 23 months 2017-2019 <br>23 months<br> 2017 - 2019</p>
+								<p style="font-family: Noto sans JP ; font-size: 25px; color: #011742; font-style: normal; font-weight: normal;" >Bebidas Bolivianas BBO S.A./CCU/Heineken<br>  Brand manager - softdrinks & water<br>23 months<br> 2017 - 2019</p>
 							</a>
 						</div>
 					
