--- a/index.html
+++ b/index.html
@@ -43,7 +43,17 @@
 	}); 
 	// DOMContentLoaded  end
 </script>
+	
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XJYQX6GF1E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-XJYQX6GF1E');
+</script>
+	
 </head>
 <div>
 
