--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 	// DOMContentLoaded  end
 </script>
 	
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XJYQX6GF1E"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P77S9ZB0XB"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-XJYQX6GF1E');
+  gtag('config', 'G-P77S9ZB0XB');
 </script>
 	
 </head>
