--- a/Nonna.html
+++ b/Nonna.html
@@ -54,7 +54,7 @@
 	<section class="border-bottom" >
 	<nav class="navbar navbar-main navbar-expand-lg navbar-light" id="navbar_top" style="background: #A5C1F8 0% 0% no-repeat padding-box; overflow: hidden;">
 	  <div class="container-fluid">
-		  <a class="navbar-brand" href="#"><img src="media/Logo.svg" class="logo"></a>
+		  <a class="navbar-brand"  ><img src="media/Logo.svg" class="logo"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav1" aria-controls="main_nav" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
@@ -79,7 +79,7 @@
 					  <a class="nav-link" href="https://www.linkedin.com/in/maurolandivar" style="color: white; margin-right: 80px;">LinkedIn</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link" href="mailto: someone@example.com" style="color: white;">E-mail</a>
+					  <a class="nav-link" href="mailto: mauro@landivarparada.com" style="color: white;">E-mail</a>
 					</li>
 				  </ul>
 		  </div> <!-- widgets-wrap.// -->
@@ -255,7 +255,7 @@
 				<div class="col-md-3"></div>
 				<div class="col-md-2 text-white "><a href="https://www.facebook.com/mauro.landivar"><p style="color: white; font: normal normal bold 35px/51px Noto Sans JP; text-align: center;"><b>FACEBOOK</b></p></a></div>
 				<div class="col-md-2 text-white "><a href="https://www.linkedin.com/in/maurolandivar"><p style=" color: white; font: normal normal bold 35px/51px Noto Sans JP; text-align: center;"><b>LINKEDIN</b></p></a></div>
-				<div class="col-md-2 text-white "><a href="mailto: someone@example.com"><p style="color: white; font: normal normal bold 35px/51px Noto Sans JP; text-align: center;">E-MAIL</p></a></div>
+				<div class="col-md-2 text-white "><a href="mailto: mauro@landivarparada.com"><p style="color: white; font: normal normal bold 35px/51px Noto Sans JP; text-align: center;">E-MAIL</p></a></div>
 				<div class="col-md-3"></div>
 			</div>
 			
