--- a/My life.html
+++ b/My life.html
@@ -53,7 +53,7 @@
 	<section class="border-bottom" >
 	<nav class="navbar navbar-main navbar-expand-lg navbar-light" id="navbar_top" style="background: #A5C1F8 0% 0% no-repeat padding-box; overflow: hidden;">
 	  <div class="container-fluid">
-		  <a class="navbar-brand" href="#"><img src="media/Logo.svg" class="logo"></a>
+		  <a class="navbar-brand"  ><img src="media/Logo.svg" class="logo"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav1" aria-controls="main_nav" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
@@ -78,7 +78,7 @@
 					  <a class="nav-link" href="https://www.linkedin.com/in/maurolandivar" style="color: white; margin-right: 80px;">LinkedIn</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link" href="mailto: someone@example.com" style="color: white;">E-mail</a>
+					  <a class="nav-link" href="mailto: mauro@landivarparada.com" style="color: white;">E-mail</a>
 					</li>
 				  </ul>
 		  </div> <!-- widgets-wrap.// -->
@@ -281,7 +281,7 @@
 				<div class="col-md-1"></div>
 				<div class="col-md-2 d-none d-lg-block text-center" >
 					<div class="icontext mb-3 " >
-						<a href="#">
+						<a  >
 						<img  style="width: 133px; height: 133px;" src="media/New folder/mylife/1.png" style="background-color: aliceblue;">
 						</div> <!-- iconbox // -->
 						<div>
@@ -291,7 +291,7 @@
 				</div>
 				<div class="col-md-2 d-none d-lg-block text-center">
 					<div class="icontext mb-3 " >
-						<a href="#">
+						<a  >
 						<img  style="width: 133px; height: 133px;" src="media/New folder/mylife/2.png" style="background-color: aliceblue;">
 						</div> <!-- iconbox // -->
 						<div>
@@ -301,7 +301,7 @@
 				</div>
 				<div class="col-md-2  d-none d-lg-block">
 					<div class="icontext mb-3 " >
-						<a href="#">
+						<a  >
 						<img  style="width: 133px; height: 133px;" src="media/New folder/mylife/3.png" style="background-color: aliceblue;">
 						</div> <!-- iconbox // -->
 						<div>
@@ -311,7 +311,7 @@
 				</div>
 				<div class="col-md-2  d-none d-lg-block">
 					<div class="icontext mb-3 " >
-						<a href="#">
+						<a  >
 						<img  style="width: 133px; height: 133px;" src="media/New folder/mylife/4.png" style="background-color: aliceblue;">
 						</div> <!-- iconbox // -->
 						<div>
@@ -321,7 +321,7 @@
 				</div>
 				<div class="col-md-2 ml-5 d-none d-lg-block">
 					<div class="icontext mb-3 " >
-						<a href="#">
+						<a  >
 						<img  style="width: 133px; height: 133px;" src="media/New folder/mylife/5.png" style="background-color: aliceblue;">
 						</div> <!-- iconbox // -->
 						<div>
@@ -337,7 +337,7 @@
 			<div class="col-md-2	"></div>
 			<div class="col-md-2 d-none d-lg-block" >
 				<div class="icontext mb-3 " >
-					<a href="#">
+					<a  >
 					<img  style="width: 133px; height: 133px;" src="media/New folder/mylife/6.png" style="background-color: aliceblue;">
 					</div> <!-- iconbox // -->
 					<div>
@@ -347,7 +347,7 @@
 			</div>
 			<div class="col-md-2  d-none d-lg-block">
 				<div class="icontext mb-3 " >
-					<a href="#">
+					<a  >
 					<img  style="width: 133px; height: 133px;" src="media/New folder/mylife/7.png" style="background-color: aliceblue;">
 					</div> <!-- iconbox // -->
 					<div>
@@ -357,7 +357,7 @@
 			</div>
 			<div class="col-md-2  d-none d-lg-block">
 				<div class="icontext mb-3 " >
-					<a href="#">
+					<a  >
 					<img  style="width: 133px; height: 133px;" src="media/New folder/mylife/8.png" style="background-color: aliceblue;">
 					</div> <!-- iconbox // -->
 					<div>
@@ -367,7 +367,7 @@
 			</div>
 			<div class="col-md-2  d-none d-lg-block">
 				<div class="icontext mb-3 " >
-					<a href="#">
+					<a  >
 					<img  style="width: 133px; height: 133px;" src="media/New folder/mylife/9.png" style="background-color: aliceblue;">
 					</div> <!-- iconbox // -->
 					<div>
@@ -385,7 +385,7 @@
 				<div class="col-md-3"></div>
 				<div class="col-md-2 text-white "><a href="https://www.facebook.com/mauro.landivar"><p style="color: white; font: normal normal bold 35px/51px Noto Sans JP; text-align: center;"><b>FACEBOOK</b></p></a></div>
 				<div class="col-md-2 text-white "><a href="https://www.linkedin.com/in/maurolandivar"><p style=" color: white; font: normal normal bold 35px/51px Noto Sans JP; text-align: center;"><b>LINKEDIN</b></p></a></div>
-				<div class="col-md-2 text-white "><a href="mailto: someone@example.com"><p style="color: white; font: normal normal bold 35px/51px Noto Sans JP; text-align: center;">E-MAIL</p></a></div>
+				<div class="col-md-2 text-white "><a href="mailto: mauro@landivarparada.com"><p style="color: white; font: normal normal bold 35px/51px Noto Sans JP; text-align: center;">E-MAIL</p></a></div>
 				<div class="col-md-3"></div>
 			</div>
 			
