--- a/Professional Experinces.html
+++ b/Professional Experinces.html
@@ -23,6 +23,24 @@
 <link href="css/responsive.css" rel="stylesheet" />
 <link href="css/styles.css" rel="stylesheet" />
 <!-- custom javascript -->
+<style>
+	.button1 {
+		border: none;
+		 font: normal normal normal 25px/36px Noto Sans JP;
+		  border-radius: 15px;
+		   width: 100px; 
+		   height: 48px;
+		    background-image:
+			 linear-gradient(to right,#FFA800, #FFFFAA  );
+	  transition: transform .5s; /* Animation */
+	  margin: 0 auto;
+	}
+	
+	.button1:hover {
+	  transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+	}
+	</style>
+
 <script src="js/script.js" type="text/javascript"></script>
 <script type="text/javascript">
 	document.addEventListener("DOMContentLoaded", function(){
@@ -52,7 +70,7 @@
 	<section class="border-bottom" >
 	<nav class="navbar navbar-main navbar-expand-lg navbar-light" id="navbar_top" style="background: #A5C1F8 0% 0% no-repeat padding-box; overflow: hidden;">
 	  <div class="container-fluid">
-		  <a class="navbar-brand" href="#"><img src="media/Logo.svg" class="logo"></a>
+		  <a class="navbar-brand"  ><img src="media/Logo.svg" class="logo"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav1" aria-controls="main_nav" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
@@ -77,7 +95,7 @@
 					  <a class="nav-link" href="www.linkedin.com/in/maurolandivar" style="color: white; margin-right: 80px;">LinkedIn</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link" href="mailto: someone@example.com" style="color: white;">E-mail</a>
+					  <a class="nav-link" href="mailto: mauro@landivarparada.com" style="color: white;">E-mail</a>
 					</li>
 				  </ul>
 		  </div> <!-- widgets-wrap.// -->
@@ -115,7 +133,7 @@
 											</div> <!-- iconbox // -->
 											<div>
 												<p style="font-family: Noto sans JP ; font-size: 25px; color: #011742; font-style: normal; font-weight: normal;" >Nuevatel –Viva (TELECOM)<br> Product owner-Postpaid<br> 04/2019 -Presently<br><br><br></p>
-												<button class="btn mb-4 text-white" style="border: none; font: normal normal normal 25px/36px Noto Sans JP; border-radius: 15px; width: 134px; height: 54px; background-image: linear-gradient(to right,#FFA800, #FFFFAA  );">More</button>
+												<button class="button1 btn mb-4 text-white" >More</button>
 											</a>
 										</div>
 									</div>
@@ -127,7 +145,7 @@
 											</div> <!-- iconbox // -->
 											<div>
 												<p style="font-family: Noto sans JP ; font-size: 25px; color: #011742; font-style: normal; font-weight: normal;" >Bebidas Bolivianas BBO S.A./CCU/Heineken<br> Brand manager - softdrinks<br>23 months<br> 2017-2019</p>
-												<button class="btn mb-4 text-white" style="border: none; font: normal normal normal 25px/36px Noto Sans JP; border-radius: 15px; width: 134px; height: 54px; background-image: linear-gradient(to right,#FFA800, #FFFFAA  );">More</button>
+												<button class="button1 btn mb-4 text-white" >More</button>
 											</a>
 										</div>
 									</div>
@@ -137,7 +155,7 @@
 									<div class="col-md-2 col-sm-2 col-xs-2"></div>
 									<div class="col-md-4 col-sm-4 col-xs-4">
 										<div class="icontext mt-5 ">
-											<a href="#">
+											<a  >
 											<img class="icon icon-lg rounded-circle mb-3" style="width: 134px; height: 134px;" src="media/New folder/LDS.png">
 											</div> <!-- iconbox // -->
 											<div>
@@ -148,7 +166,7 @@
 									
 									<div class="col-md-4 col-sm-6 col-xs-4">
 										<div class="icontext mt-5 ">
-											<a href="#">
+											<a  >
 											<img class="icon icon-lg rounded-circle mb-3" style="width: 134px; height: 134px;" src="media/New folder/JP.png">
 											</div> <!-- iconbox // -->
 											<div>
@@ -184,12 +202,12 @@
 									<div class="col-md-2 col-sm-2 col-xs-2"></div>
 									<div class="col-md-2 col-sm-2 col-xs-2 text-center">
 										<div class="icontext mt-5 ">
-											<a href="#">
+											<a  >
 											<img class="icon icon-lg rounded-circle" style="width: 134px; height: 134px;" src="media/New folder/Alien.png">
 											</div> <!-- iconbox // -->
 											<div>
 												<p style="font-family: Noto sans JP ; font-size: 25px; color: #011742; font-style: normal; font-weight: normal;" >Alien Store<br> Founder/Owner <br>1 month <br>2021</p>
-												<button class="btn mb-4 text-white" style="border: none; font: normal normal normal 25px/36px Noto Sans JP; border-radius: 15px; width: 134px; height: 54px; background-image: linear-gradient(to right,#FFA800, #FFFFAA  );">More</button>
+												<button class="button1 btn mb-4 text-white" >More</button>
 											</a>
 										</div>
 									</div>
@@ -201,14 +219,14 @@
 											</div> <!-- iconbox // -->
 											<div>
 												<p style="font-family: Noto sans JP ; font-size: 25px; color: #011742; font-style: normal; font-weight: normal;" >Nonna <br>Founder/Owner<br> 24 months <br>2018 - 2020</p>
-												<button class="btn mb-4 text-white" style="border: none; font: normal normal normal 25px/36px Noto Sans JP; border-radius: 15px; width: 134px; height: 54px; background-image: linear-gradient(to right,#FFA800, #FFFFAA  );">More</button>
+												<button class="button1 btn mb-4 text-white" >More</button>
 											</a>
 										</div>
 									</div>
 									<div class="col-md-1 col-sm-1 col-xs-1"></div>
 									<div class="col-md-2 col-sm-2 col-xs-2 text-center">
 										<div class="icontext mt-5 ">
-											<a href="#">
+											<a  >
 											<img class="icon icon-lg rounded-circle" style="width: 134px; height: 134px;" src="media/New folder/LCS.png">
 											</div> <!-- iconbox // -->
 											<div>
@@ -227,7 +245,7 @@
 				<div class="col-md-3"></div>
 				<div class="col-md-2 text-white "><a href="https://www.facebook.com/mauro.landivar"><p style="color: white; font: normal normal bold 35px/51px Noto Sans JP; text-align: center;"><b>FACEBOOK</b></p></a></div>
 				<div class="col-md-2 text-white "><a href="https://www.linkedin.com/in/maurolandivar"><p style=" color: white; font: normal normal bold 35px/51px Noto Sans JP; text-align: center;"><b>LINKEDIN</b></p></a></div>
-				<div class="col-md-2 text-white "><a href="mailto: someone@example.com"><p style="color: white; font: normal normal bold 35px/51px Noto Sans JP; text-align: center;">E-MAIL</p></a></div>
+				<div class="col-md-2 text-white "><a href="mailto: mauro@landivarparada.com"><p style="color: white; font: normal normal bold 35px/51px Noto Sans JP; text-align: center;">E-MAIL</p></a></div>
 				<div class="col-md-3"></div>
 			</div>
 			
