--- a/Viva.html
+++ b/Viva.html
@@ -37,7 +37,10 @@
 	}
 	
 	.button1:hover {
-	  transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+	  transform: scale(1.2);
+	  background-image:
+			 linear-gradient(to right,#fdb525, #FFFFAA  );
+ /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 	}
 	</style>
 <script src="js/script.js" type="text/javascript"></script>
@@ -194,7 +197,7 @@
 												<p class="text-center mt-4  ml-3 mr-3 mb-4" style="font: normal normal normal 20px/29px Noto Sans JP; height: 264px; color: #011742; font-style: normal; font-weight: normal;">
 													<br>Commercial action:<br> Impulse customers to pay by digital channels. Objective:<br> Reduce the personal exposure to COVID 19. Digital payments are cheaper.</p>
 											</div>
-											<button class="button1 btn mb-4 text-white" >More</button>
+											<a href="https://novedades.viva.com.bo/gana-con-tu-pago-digital/"><button class="button1 btn mb-4 text-white" >More</button></a>
 											
 									</div>
 									<div class="col-md-3 col-sm-3 col-xs-3  text-center">
@@ -208,7 +211,7 @@
 											<p class="text-center mt-4  ml-3 mr-3 mb-4" style="font: normal normal normal 20px/29px Noto Sans JP; height: 264px; color: #011742; font-style: normal; font-weight: normal;">
 												<br><br><br>Commercial action:<br> Creation, pricing & segmentation.</p>
 											</div>
-											<button class="button1 btn mb-4 text-white" >More</button>	
+											<a href="https://novedades.viva.com.bo/gana-con-tu-pago-digital/">	<button class="button1 btn mb-4 text-white" >More</button>	</a>
 									</div>
 									<div class="col-md-3 col-sm-3 col-xs-3  text-center">
 										<div class="icontext mt-5 mb-5 ">
@@ -221,7 +224,7 @@
 											<p class="text-center mt-4  ml-3 mr-3 mb-4" style="font: normal normal normal 20px/29px Noto Sans JP; height: 264px; color: #011742; font-style: normal; font-weight: normal;">
 												<br>Commercial action:<br> Creation, pricing & segmentation.<br><br> Objective:<br> Reduce CHURN Upselling</p>
 											</div>
-											<button class="button1 btn mb-4 text-white" >More</button>	
+											<a href="https://novedades.viva.com.bo/gana-con-tu-pago-digital/"><button class="button1 btn mb-4 text-white" >More</button></a>	
 									</div>
 									<div class="col-md-3 col-sm-3 col-xs-3  text-center">
 										<div class="icontext mt-5 mb-5 ">
@@ -234,7 +237,7 @@
 											<p class="text-center  mt-4  ml-3 mr-3 mb-4" style="margin-top: 20px;  font: normal normal normal 20px/29px Noto Sans JP;  color: #011742; font-style: normal; font-weight: normal;">
 												<br><br>Commercial action:<br> Creation, pricing and segmentation Innovation in purchase process</p>
 											</div>
-											<button class="button1 btn mt-4 mb-4 text-white" >More</button>
+											<a href="https://novedades.viva.com.bo/gana-con-tu-pago-digital/"><button class="button1 btn mt-4 mb-4 text-white" >More</button></a>
 									</div>
 								</div>
 
