Last final commit

--- a/My life.html
+++ b/My life.html
@@ -137,10 +137,10 @@
 							<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/New folder/mylife/3(2).png"></span>
 						</div>
 						<div class="d-block d-sm-none" style="margin-left: 20%;">
-							<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Surf/3.jpg"></span>
-							<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Surf/1.jpg"></span><br>
-							<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Surf/2.jpg"></span>
-							<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/mylife/Surf/Surf2.jpg"></span>
+							<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/New folder/mylife/1(1).png"></span>
+							<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/New folder/mylife/2(1).png"></span><br>
+							<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/New folder/mylife/3(1).png"></span>
+							<span><img class="rounded mt-1" style="width: 202px; height: 202px;" src="media/New folder/mylife/4(1).png"></span>
 						</div>
 					</div>
 					<div class="col-md-1"></div>
