--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 					</div>
 					<div class="row ">
 						<div class="col-md-12 text-white mt-1">
-							<p class="ml-5" style="font: normal normal bold 25px/33px Segoe UI;  font-family: 'Segoe UI',Helvetica;">Greeting I'm</p>
+							<p class="ml-5" style="font: normal normal bold 25px/33px Segoe UI;  font-family: 'Segoe UI',Helvetica;">Greetings I'm</p>
 							<p class="ml-5 d-none d-sm-block" style="font: normal normal bold 60px/106px Segoe UI;  font-family: 'Segoe UI',Helvetica; "><b>Mauro Landivar</b></p>
 							<p class="ml-5 d-block d-sm-none" style="font-size: 35px; "><b>Mauro Landivar</b></p>
 						</div>
