--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 									<img class="icon icon-lg rounded-circle" style="width: 199px; height: 200px;" src="media/New folder/home/Nonna.png">
 									</div> <!-- iconbox // -->
 									<div>
-										<p style="font: normal normal normal 25px/36px Noto Sans JP; color: #011742; font-family: 'Noto Sans JP',Helvetica; " >Nonna <br> Founder/OwnerProduct <br>24 months<br> 2018 - 2020</p>
+										<p style="font: normal normal normal 25px/36px Noto Sans JP; color: #011742; font-family: 'Noto Sans JP',Helvetica; " >Nonna <br> Founder/Owner <br>24 months<br> 2018 - 2020</p>
 									</a>
 								</div>
 								<hr class=" d-none d-lg-block mt-5" style=" color:#3F75E2; background-color:#fff; height:60px;  width:2px;  border-left:2px dashed #3F75E2;">
