--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
 										<div class="row">
 											<div class="col-md-12  mb-2">
 												<p style="color: #011742; font: normal normal bold 25px/36px Noto Sans JP;" class="mt-5"><b>Languages</b></p>
-												<p style="color: #011742; font: normal normal normal 20px/29px Noto Sans JP; font-family: 'Noto Sans JP',Helvetica;" >Spanish (native language)<br>English<br>Portguese<br>Used to speak French(forgoten)</p>
+												<p style="color: #011742; font: normal normal normal 20px/29px Noto Sans JP; font-family: 'Noto Sans JP',Helvetica;" >Spanish (native language)<br>English<br>Portguese<br>Used to speak French(forgotten)</p>
 
 											</div>
 										</div>
