--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <title>Mauro Home</title>
 
+<!-- Me gustaria agradecer a Ubaid que me ayudo a desarrollar la web. A Martin Fleig por ser un gran amigo y por guiarme en este camino, sos un gran amigo y un excelente profesional -->
 <link rel="shortcut icon" type="image/x-icon" href="media/Logo.svg">
 
 <!-- jQuery -->
