--- a/Viva.html
+++ b/Viva.html
@@ -211,7 +211,7 @@
 											<p class="text-center mt-4  ml-3 mr-3 mb-4" style="font: normal normal normal 20px/29px Noto Sans JP; height: 264px; color: #011742; font-style: normal; font-weight: normal;">
 												<br><br><br>Commercial action:<br> Creation, pricing & segmentation.</p>
 											</div>
-											<a href="https://novedades.viva.com.bo/gana-con-tu-pago-digital/">	<button class="button1 btn mb-4 text-white" >More</button>	</a>
+											<a href="https://novedades.viva.com.bo/habla-ilimitado/">	<button class="button1 btn mb-4 text-white" >More</button>	</a>
 									</div>
 									<div class="col-md-3 col-sm-3 col-xs-3  text-center">
 										<div class="icontext mt-5 mb-5 ">
@@ -224,7 +224,7 @@
 											<p class="text-center mt-4  ml-3 mr-3 mb-4" style="font: normal normal normal 20px/29px Noto Sans JP; height: 264px; color: #011742; font-style: normal; font-weight: normal;">
 												<br>Commercial action:<br> Creation, pricing & segmentation.<br><br> Objective:<br> Reduce CHURN Upselling</p>
 											</div>
-											<a href="https://novedades.viva.com.bo/gana-con-tu-pago-digital/"><button class="button1 btn mb-4 text-white" >More</button></a>	
+											<a href="https://www.viva.com.bo/empresas/"><button class="button1 btn mb-4 text-white" >More</button></a>	
 									</div>
 									<div class="col-md-3 col-sm-3 col-xs-3  text-center">
 										<div class="icontext mt-5 mb-5 ">
@@ -237,7 +237,7 @@
 											<p class="text-center  mt-4  ml-3 mr-3 mb-4" style="margin-top: 20px;  font: normal normal normal 20px/29px Noto Sans JP;  color: #011742; font-style: normal; font-weight: normal;">
 												<br><br>Commercial action:<br> Creation, pricing and segmentation Innovation in purchase process</p>
 											</div>
-											<a href="https://novedades.viva.com.bo/gana-con-tu-pago-digital/"><button class="button1 btn mt-4 mb-4 text-white" >More</button></a>
+											<a href="https://novedades.viva.com.bo/pases_libres/"><button class="button1 btn mt-4 mb-4 text-white" >More</button></a>
 									</div>
 								</div>
 
