--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 		<!-- ========================= Heading ========================= -->
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<p class="d-none d-sm-block" style="color: #011742; font-size: 80px; font-family: 'Noto Sans JP',Helvetica;"><b>Professional Experince</b></p>
-					<p class="-block d-sm-none" style="color: #011742; font-size: 50px; font-family: 'Noto Sans JP',Helvetica;"><b>Professional Experince</b></p>
+					<p class="d-none d-sm-block" style="color: #011742; font-size: 80px; font-family: 'Noto Sans JP',Helvetica;"><b>Professional Experience</b></p>
+					<p class="-block d-sm-none" style="color: #011742; font-size: 50px; font-family: 'Noto Sans JP',Helvetica;"><b>Professional Experience</b></p>
 				</div>
 			</div>
 			<!-- ========================= Heading End ========================= -->
