--- a/index.html
+++ b/index.html
@@ -803,11 +803,11 @@
 						<div class="row">
 							<div class="col-xs-4 col-md-4 ">
 							<div class="inline mt-3 ml-3">
-								<span><img class="icon rounded-circle" style="width: 150px; height: 150px;" src="media/New folder/home/Foto1.png"></span>
-								<span><img class="icon rounded-circle " style="width: 40px; height: 40px;  margin-top: 105px; margin-left: -10px; " src="media/5 References/1200px-Flag_of_Bolivia.svg.png"></span>
+								<span><img class="icon rounded-circle" style="width: 150px; height: 150px;" src="media/New folder/home/Sebas.jpg"></span>
+								<span><img class="icon rounded-circle " style="width: 40px; height: 40px;  margin-top: 105px; margin-left: -10px; " src="media/5 References/Ecuador.png"></span>
 							</div>
 									<div>
-										<p class="  mt-2"  style="font: normal normal normal 20px/29px Noto Sans JP; font-family: 'Noto Sans JP',Helvetica;"  >Victor Hugo Daher<br> Market Insights Manager - Box Media<br> Project: + te pruebo<br> Lenguage: Spanish - English</b></p>
+										<p class="  mt-2"  style="font: normal normal normal 20px/29px Noto Sans JP; font-family: 'Noto Sans JP',Helvetica;"  >Sebastian Espinosa<br> Head of product  - Viva <br> Project: All projects in Viva<br> Lenguage: Spanish - English</b></p>
 									</a>
 								</div>
 						</div>
