--- a/index.html
+++ b/index.html
@@ -823,11 +823,11 @@
 						</div>
 						<div class="col-xs-4 col-md-4 ">
 							<div class="inline mt-3 ml-3">
-								<span><img class="icon rounded-circle" style="width: 150px; height: 150px;" src="media/New folder/home/Foto 3.png"></span>
-								<span><img class="icon rounded-circle " style="width: 40px; height: 40px; margin-top: 105px; margin-left: -10px;" src="media/5 References/1200px-Flag_of_Bolivia.svg.png"></span>
+								<span><img class="icon rounded-circle" style="width: 150px; height: 150px;" src="media/New folder/home/Eloize.jpg"></span>
+								<span><img class="icon rounded-circle " style="width: 40px; height: 40px; margin-top: 105px; margin-left: -10px;" src="media/5 References/Flag_of_Brazil.svg.png"></span>
 							</div>
 									<div>
-										<p class="  mt-2"  style="font: normal normal normal 20px/29px Noto Sans JP; font-family: 'Noto Sans JP',Helvetica;"  >Gustavo Leigue<br> CEO - Essentials<br> Project: New flavor "Uva" proyect<br> Lenguage: Spanish - English - Portuguese</b></p>
+										<p class="  mt-2"  style="font: normal normal normal 20px/29px Noto Sans JP; font-family: 'Noto Sans JP',Helvetica;"  >Eloize Krause<br>Sales Executive - Duas Rodas Industrial<br> Project: New flavor "Uva" project<br> Lenguage: Spanish - English - Portuguese</b></p>
 									</a>
 									</div>
 						</div>
@@ -860,7 +860,7 @@
 								<span><img class="icon rounded-circle " style="width: 40px; height: 40px; margin-top: 105px; margin-left: -10px;" src="media/5 References/Chile.png"></span>
 							</div>
 									<div>
-										<p class="  mt-2" style="font: normal normal normal 20px/29px Noto Sans JP; font-family: 'Noto Sans JP',Helvetica;" >Pablo Sovino <br>Commercial Manager - B.B.O. / C.C.U. <br>Project: All proyects in B.B.O <br>	Lenguage: Spanish - English</p>
+										<p class="  mt-2" style="font: normal normal normal 20px/29px Noto Sans JP; font-family: 'Noto Sans JP',Helvetica;" >Pablo Sovino <br>Commercial Manager - B.B.O. / C.C.U. <br>Project: All projects in B.B.O <br>	Lenguage: Spanish - English</p>
 									</a>
 									</div>
 						</div>
