--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
 						<div class="col-xs-4 col-md-4 ">
 							<div class="inline mt-3 ml-3">
 								<span><img class="icon rounded-circle" style="width: 150px; height: 150px;" src="media/New folder/home/Eloize.jpg"></span>
-								<span><img class="icon rounded-circle " style="width: 40px; height: 40px; margin-top: 105px; margin-left: -10px;" src="media/5 References/Flag_of_Brazil.svg.png"></span>
+								<span><img class="icon rounded-circle " style="width: 40px; height: 40px; margin-top: 105px; margin-left: -10px;" src="media/New folder/home/POrtugues@2x.png"></span>
 							</div>
 									<div>
 										<p class="  mt-2"  style="font: normal normal normal 20px/29px Noto Sans JP; font-family: 'Noto Sans JP',Helvetica;"  >Eloize Krause<br>Sales Executive - Duas Rodas Industrial<br> Project: New flavor "Uva" project<br> Lenguage: Spanish - English - Portuguese</b></p>
