--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
 								<span><img class="icon rounded-circle " style="width: 40px; height: 40px;  margin-top: 105px; margin-left: -10px; " src="media/5 References/Ecuador.png"></span>
 							</div>
 									<div>
-										<p class="  mt-2"  style="font: normal normal normal 20px/29px Noto Sans JP; font-family: 'Noto Sans JP',Helvetica;"  >Sebastian Espinosa<br> Head of product  - Viva <br> Project: All projects in Viva<br> Lenguage: Spanish - English</b></p>
+										<p class="  mt-2"  style="font: normal normal normal 20px/29px Noto Sans JP; font-family: 'Noto Sans JP',Helvetica;"  >Sebastian Espinosa<br> Ex- Product Director  - Viva <br> Project: All projects in Viva<br> Lenguage: Spanish - English</b></p>
 									</a>
 								</div>
 						</div>
